--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@dnd-kit/modifiers": "^6.0.0",
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.5",
     "@layerhub-io/react": "^0.3.2",
     "@layerhub-io/react-custom-scrollbar": "^0.0.1",
     "@layerhub-io/use-timer": "^0.1.1",
+    "@mui/material": "^5.11.4",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/node": "^17.0.35",
     "are-passive-events-supported": "^1.1.1",
@@ -31,21 +34,23 @@
     "nanoid": "^3.3.4",
     "pixi.js": "^6.5.0",
     "react": "^18.0.0",
+    "react-bootstrap": "2.0.0-rc.0",
     "react-colorful": "^5.5.1",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.0",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
+    "react-tabs": "^6.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "styletron-engine-atomic": "1.5.0-beta.2",
     "styletron-react": "6.1.0-beta.2",
     "use-debounce": "^8.0.4",
-    "use-latest": "^1.2.1",
-    "use-react-screenshot": "^3.0.0",
     "use-dynamic-refs": "^1.0.0",
-    "react-bootstrap": "2.0.0-rc.0"
+    "use-latest": "^1.2.1",
+    "use-react-screenshot": "^3.0.0"
   },
   "devDependencies": {
     "@layerhub-io/types": "^0.3.0",
