--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "homepage": "/editor",
   "version": "0.0.0",
+  "proxy": "http://localhost:5173",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -37,6 +38,7 @@
     "react-bootstrap": "2.0.0-rc.0",
     "react-colorful": "^5.5.1",
     "react-dom": "^18.0.0",
+    "react-full-screen": "^1.1.1",
     "react-i18next": "^11.18.0",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.1",
